--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,27 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="container">
-    <div class="containerTitle">
-        <h1 class="bigTitle">Bordeaux <br> Quizzzz ...</h1>
-    </div>
+        <div class="containerTitle">
+            <h1 class="bigTitle">Bordeaux <br> Quizzzz ...</h1>
+        </div>
+
+        <button class="button">Suivant</button>
     </section>
 
-<button class="button">lnjln</button>
+    <section class="quizz1">
+
+        <button class="button">Suivant</button>
+    </section>
+
+    <section class="questionMort">
+
+
+
+    </section>
 
 </body>
+
 </html>
