html header et footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<header>
+    <div class="header">
+        <h1> le logo ICI</h1>
+    </div>
+</header>
+
 <body>
     <section class="container">
         <div class="containerTitle">
@@ -28,6 +34,12 @@
 
 
     </section>
+
+    <footer>
+        <div class="footer">
+            <h3> le compteur ici </h3>
+        </div>
+    </footer>
 
 </body>
 
