--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="quizz1">
-
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iure deleniti porro nisi similique doloremque eius. Nisi, dicta, reprehenderit fuga consectetur, ipsam ad maxime modi quas quidem vero molestiae laudantium.</p>
         <button class="button">Suivant</button>
     </section>
 
