scroll and landing page

--- a/index.html
+++ b/index.html
@@ -11,23 +11,55 @@
 
 <header>
     <div class="header">
-        <h1> le logo ICI</h1>
+        <img src="/assets/cannelé noir et blanc.png" alt="">    
     </div>
 </header>
 
 <body>
+
+
     <section class="container">
         <div class="containerTitle">
-            <h1 class="bigTitle">Bordeaux <br> Quizzzz ...</h1>
+            <h1 class="bigTitle">Bordeaux <br> Quizzzz</h1>
         </div>
-
-        <button class="button">Suivant</button>
+        <div class="button1"><a href=""><img src="/assets/PARTICIPER.png" alt=""></a></div>
+        <div class="image1"><img src="/assets/cannelé noir et blanc.png" alt="image cannelé"></div>
+        <div class="image2"><img src="/assets/Logo macaron noir et blanc.png" alt="image cannelé"></div>
     </section>
+
+    <section class="team">
+        <div class="bigContainer">
+            <div class="reglement">
+                <h2>Réglement</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis tempora amet, rerum officia non iste quaerat, natus earum illum alias ex optio possimus incidunt. Cupiditate eaque similique inventore odio, est sit quaerat voluptatem laudantium voluptas sed, dicta omnis dolores dolore corporis labore reiciendis in harum! Enim soluta optio blanditiis sint.</p>
+            </div>
+            
+                <div class="containerTeam">
+                    <div class="containerTeam1">
+                        <input type="text">
+                        <h2>Equipe 1</h2>
+                        <p>1</p>
+                        <button>Lancez les dès</button>
+                        <img src="/assets/cannelé noir et blanc.png" alt="cannelé">
+                    </div>
+                    <div class="containerTeam2">
+                        <input type="text">
+                        <h2>Equipe 2</h2>
+                        <p>2</p>
+                        <button>lancez les dès</button>
+                        <img src="/assets/Logo macaron noir et blanc.png" alt="macaron">
+                    </div>
+                </div>
+        
+    </div>
+    </section>
+
 
     <section class="quizz1">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iure deleniti porro nisi similique doloremque eius. Nisi, dicta, reprehenderit fuga consectetur, ipsam ad maxime modi quas quidem vero molestiae laudantium.</p>
         <button class="button">Suivant</button>
     </section>
+
 
     <section class="questionMort">
 
@@ -40,6 +72,8 @@
             <h3> le compteur ici </h3>
         </div>
     </footer>
+
+    <script src="app.js"></script>
 
 </body>
 
