--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header>
     <div class="header">
-        <h1> le logo ICI</h1>
+        <img src="/assets/logo.JPG" alt="logo">
     </div>
 </header>
 
@@ -20,13 +20,17 @@
         <div class="containerTitle">
             <h1 class="bigTitle">Bordeaux <br> Quizzzz ...</h1>
         </div>
+        <div class="btn-holder">
+            <button class="button">Suivant</button>
+        </div>
 
-        <button class="button">Suivant</button>
     </section>
 
     <section class="quizz1">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit voluptatibus asperiores sapiente
+            error veritatis ducimus laboriosam officia quibusdam nesciunt molestiae magni, repudiandae consequuntur
+            animi laudantium rerum porro amet delectus voluptas?</p>
 
-        <button class="button">Suivant</button>
     </section>
 
     <section class="questionMort">
@@ -42,5 +46,6 @@
     </footer>
 
 </body>
+<script src="app.js"></script>
 
 </html>
