--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<header class="header">
-    <div>
-        <img src="/assets/cannelé noir et blanc.png" alt="">
-    </div>
-</header>
 
 <body>
+    <header class="header">
+        <div>
+            <img src="/assets/cannelé noir et blanc.png" alt="">
+        </div>
+    </header>
 
 
     <section class="container">
@@ -31,10 +31,7 @@
         <div class="bigContainer">
             <div class="reglement">
                 <h2>Réglement</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis tempora amet, rerum officia non
-                    iste quaerat, natus earum illum alias ex optio possimus incidunt. Cupiditate eaque similique
-                    inventore odio, est sit quaerat voluptatem laudantium voluptas sed, dicta omnis dolores dolore
-                    corporis labore reiciendis in harum! Enim soluta optio blanditiis sint.</p>
+
             </div>
 
             <div class="containerTeam">
@@ -66,21 +63,29 @@
     </section>
 
 
-    <section class="questionMort">
 
+    <section class="questionMort">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique nemo laudantium nesciunt doloremque odit.
+            Tempore quod odio enim? Explicabo qui ex officia quaerat recusandae unde similique voluptatem perferendis
+            dicta corrupti!</p>
 
 
     </section>
 
     <footer>
         <div class="footer">
-            <h3> le compteur ici </h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, mollitia aut culpa possimus veniam
+                deleniti illum cumque nobis tempore omnis reiciendis aspernatur quibusdam labore, numquam tempora porro
+                saepe eum nemo.</p>
+
         </div>
     </footer>
+
 
     <script src="app.js"></script>
 
 </body>
-<script src="app.js"></script>
+
+
 
 </html>
