--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<header class="header">
-    <div>
-        <img src="/assets/cannelé noir et blanc.png" alt="">    
-    </div>
-</header>
 
 <body>
 
-
+    <header class="header">
+        <div>
+            <img src="/assets/cannelé noir et blanc.png" alt="">    
+        </div>
+    </header>
+    
     <section class="container">
         <div class="containerTitle">
             <h1 class="bigTitle">Bordeaux <br> Quizzzz</h1>
@@ -50,8 +50,7 @@
                         <img src="/assets/Logo macaron noir et blanc.png" alt="macaron">
                     </div>
                 </div>
-        
-    </div>
+        </div>
     </section>
 
 
@@ -67,9 +66,10 @@
 
     </section>
 
-    <footer>
-        <div class="footer">
+    <footer class="footer">
+        <div >
             <h3> le compteur ici </h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, amet alias? Libero, vel sed. Veritatis illo itaque dolorem consequatur dolorum!</p>
         </div>
     </footer>
 
