footer and scrool ajust

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div>
-            <img src="/assets/cannelé noir et blanc.png" alt="">
+            <img src="/assets/cannelé noir et blanc.png" alt="Logo">
         </div>
     </header>
 
@@ -27,7 +27,7 @@
         <div class="image2"><img src="/assets/Logo macaron noir et blanc.png" alt="image cannelé"></div>
     </section>
 
-    <section class="team">
+    <!-- <section class="team">
         <div class="bigContainer">
             <div class="reglement">
                 <h2>Réglement</h2>
@@ -52,32 +52,92 @@
             </div>
 
         </div>
-    </section>
+    </section> -->
 
 
     <section class="quizz1">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iure deleniti porro nisi similique doloremque
-            eius. Nisi, dicta, reprehenderit fuga consectetur, ipsam ad maxime modi quas quidem vero molestiae
-            laudantium.</p>
-        <button class="button">Suivant</button>
+        <div class="Question bordeaux">
+
+        </div>
+        <div class="diapo1">
+            <div class="question1">
+                <h2>Question 1 : comment se nomme l'équipe de rugby de TOP14 de bordeaux</h2>
+            </div>
+
+            <div class="rep1q1">
+                <h3> l'UBB</h3>
+            </div>
+            <div class="rep2q1">
+                <h3> le CABBG</h3>
+            </div>
+            <div class="rep3q1">
+                <h3> le Stade bordelais</h3>
+            </div>
+            <div class="rep4q1">
+                <h3> l'UBT</h3>
+            </div>
+        </div>
+
+    </section>
+
+
+    <section class="quizz2">
+        <div class="Question-wild">
+
+        </div>
+        <div class="diapo1-wild">
+            <div class="question1-wild">
+                <h2>Comment s'appel le formateur JS</h2>
+            </div>
+
+            <div class="rep1q1-wild">
+                <h3> David Ginola</h3>
+            </div>
+            <div class="rep2q1-wild">
+                <h3> David Ford</h3>
+            </div>
+            <div class="rep3q1-wild">
+                <h3> David fork</h3>
+            </div>
+            <div class="rep4q1-wild">
+                <h3> David Beckam</h3>
+            </div>
+        </div>
+
     </section>
 
 
 
     <section class="questionMort">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique nemo laudantium nesciunt doloremque odit.
-            Tempore quod odio enim? Explicabo qui ex officia quaerat recusandae unde similique voluptatem perferendis
-            dicta corrupti!</p>
+
+        <div class="questionfinal">
+
+
+            <div class="choco">
+                <img src="assets/Chocolatine-scaled.jpg" alt="chocolatine">
+            </div>
+
+            <div>
+                <h4> UNE CHOCOLATINE</h4>
+            </div>
+
+            <div>
+                <h4> UN PAIN AU CHOCOLAT</h4>
+            </div>
+
+        </div>
 
 
     </section>
 
     <footer>
         <div class="footer">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, mollitia aut culpa possimus veniam
-                deleniti illum cumque nobis tempore omnis reiciendis aspernatur quibusdam labore, numquam tempora porro
-                saepe eum nemo.</p>
-
+            <div class="cannele">
+                <img src="assets/cannelé noir et blanc.png" alt="cannelé">
+            </div>
+            <div class="macaron">
+                <img src="assets/Logo macaron noir et blanc.png" alt="macaron">
+            </div>
         </div>
     </footer>
 
