update before pull

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header class="header">
     <div>
-        <img src="/assets/cannelé noir et blanc.png" alt="">    
+        <img src="/assets/cannelé noir et blanc.png" alt="">
     </div>
 </header>
 
@@ -31,32 +31,61 @@
         <div class="bigContainer">
             <div class="reglement">
                 <h2>Réglement</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis tempora amet, rerum officia non iste quaerat, natus earum illum alias ex optio possimus incidunt. Cupiditate eaque similique inventore odio, est sit quaerat voluptatem laudantium voluptas sed, dicta omnis dolores dolore corporis labore reiciendis in harum! Enim soluta optio blanditiis sint.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis tempora amet, rerum officia non
+                    iste quaerat, natus earum illum alias ex optio possimus incidunt. Cupiditate eaque similique
+                    inventore odio, est sit quaerat voluptatem laudantium voluptas sed, dicta omnis dolores dolore
+                    corporis labore reiciendis in harum! Enim soluta optio blanditiis sint.</p>
             </div>
-            
-                <div class="containerTeam">
-                    <div class="containerTeam1">
-                        <input type="text">
-                        <h2>Equipe 1</h2>
-                        <p>1</p>
-                        <button>Lancez les dès</button>
-                        <img src="/assets/cannelé noir et blanc.png" alt="cannelé">
-                    </div>
-                    <div class="containerTeam2">
-                        <input type="text">
-                        <h2>Equipe 2</h2>
-                        <p>2</p>
-                        <button>lancez les dès</button>
-                        <img src="/assets/Logo macaron noir et blanc.png" alt="macaron">
-                    </div>
+
+            <div class="containerTeam">
+                <div class="containerTeam1">
+                    <input type="text">
+                    <h2>Equipe 1</h2>
+                    <p>1</p>
+                    <button>Lancez les dès</button>
+                    <img src="/assets/cannelé noir et blanc.png" alt="cannelé">
                 </div>
-        
-    </div>
+                <div class="containerTeam2">
+                    <input type="text">
+                    <h2>Equipe 2</h2>
+                    <p>2</p>
+                    <button>lancez les dès</button>
+                    <img src="/assets/Logo macaron noir et blanc.png" alt="macaron">
+                </div>
+            </div>
+
+        </div>
     </section>
 
 
     <section class="quizz1">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iure deleniti porro nisi similique doloremque eius. Nisi, dicta, reprehenderit fuga consectetur, ipsam ad maxime modi quas quidem vero molestiae laudantium.</p>
+        <div class="slider">
+            <div class="question">
+                <h2 class="stringQuestion">Quel est le nom du formateur JS ?</h2>
+                <div class="fullAnswer">
+                    <h3 class="wrongAnswer">David Ginola</h3>
+                    <h3 class="wrongAnswer">Jean-Louis David</h3>
+                    <h3 class="wrongAnswer">David Faible</h3>
+                    <h3 class="rightAnswer">Davir Faure</h3>
+                </div>
+            </div>
+            <div class="question">
+                <h2 class="stringQuestion">Quel est le nom du formateur PHP ?</h2>
+                <div class="fullAnswer">
+                    <h3 class="wrongAnswer">Jean le Géant</h3>
+                    <h3 class="wrongAnswer">Jean le Nain</h3>
+                    <h3 class="wrongAnswer">Jean le Petit</h3>
+                    <h3 class="rightAnswer">Jean le Grand</h3>
+                </div>
+            </div>
+            <div class="question">question 3</div>
+        </div>
+
+        <div class="cont-btn">
+            <div class="btn-nav left">←</div>
+            <div class="btn-nav right">→</div>
+        </div>
+
         <button class="button">Suivant</button>
     </section>
 
@@ -67,14 +96,15 @@
 
     </section>
 
-    <footer>
-        <div class="footer">
-            <h3> le compteur ici </h3>
-        </div>
-    </footer>
-
-    <script src="app.js"></script>
 
 </body>
+
+<footer>
+    <div class="footer">
+        <h3> le compteur ici </h3>
+    </div>
+</footer>
+
+<script src="app.js"></script>
 
 </html>
