dynamique compteur ok

--- a/index.html
+++ b/index.html
@@ -134,9 +134,13 @@
         <div class="footer">
             <div class="cannele">
                 <img src="assets/cannelé noir et blanc.png" alt="cannelé">
+                <h5 class="scorecannele">
+                    0 </h5>
             </div>
             <div class="macaron">
                 <img src="assets/Logo macaron noir et blanc.png" alt="macaron">
+                <h5 class="scoremacaron">
+                    0 </h5>
             </div>
         </div>
     </footer>
