--- a/index.html
+++ b/index.html
@@ -27,32 +27,38 @@
         <div class="image2"><img src="/assets/Logo macaron noir et blanc.png" alt="image cannelé"></div>
     </section>
 
-    <!-- <section class="team">
-        <div class="bigContainer">
-            <div class="reglement">
-                <h2>Réglement</h2>
-
-            </div>
-
-            <div class="containerTeam">
-                <div class="containerTeam1">
-                    <input type="text">
-                    <h2>Equipe 1</h2>
-                    <p>1</p>
-                    <button>Lancez les dès</button>
-                    <img src="/assets/cannelé noir et blanc.png" alt="cannelé">
-                </div>
-                <div class="containerTeam2">
-                    <input type="text">
-                    <h2>Equipe 2</h2>
-                    <p>2</p>
-                    <button>lancez les dès</button>
-                    <img src="/assets/Logo macaron noir et blanc.png" alt="macaron">
+    <section class=“team” id=“ancrePlay”>
+        <div class=“bigContainer”>
+            <div class=“reglement”>
+                <div>
+                    <h2>Réglement</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi iusto esse a, maxime dicta impedit
+                        facere, sunt nihil adipisci corrupti architecto! Placeat harum ratione minus vel aspernatur
+                        tenetur sit quis?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque vel recusandae saepe excepturi
+                        placeat eveniet totam distinctio nam aspernatur, quae nulla nesciunt. Vel adipisci aliquam modi
+                        nostrum excepturi magnam? Eius.</p>
                 </div>
             </div>
-
+            <form id=“form” action=“”>
+                <input type=“text” id=“text1" placeholder=“team?” value=“”>
+                <button id=“btn1”>OK</button>
+                <input type=“text” id=“text2” placeholder=“team?” value=“”>
+                <button id=“btn2">ok</button>
+            </form>
+            <div class=“containerTeam”>
+                <div class=“containerTeam1">
+                    <h4 id=“team1”></h4>
+                    <img src=“/assets/cannelenoiretblanc.png” alt=“”>
+                </div>
+                <div class=“containerTeam2">
+                    <h4 id=“team2”></h4>
+                    <img src=“/assets/Logomacaronnoiretblanc.png” alt=“macaron”>
+                </div>
+            </div>
+            <button id=“btnWin”>Qui commence?</button>
         </div>
-    </section> -->
+    </section>
 
 
     <section class="quizz1">
