--- a/index.html
+++ b/index.html
@@ -61,21 +61,24 @@
     <section class="quizz1">
         <div class="slider">
             <div class="question">
-                <h2 class="stringQuestion">Quel est le nom du formateur JS ?</h2>
+                <h2 class="stringQuestion">Prêt pour la première question ?</h2>
+            </div>
+            <div class="question">
+                <h2 class="stringQuestion">question 1</h2>
                 <div class="fullAnswer">
-                    <h3 class="wrongAnswer">David Ginola</h3>
-                    <h3 class="wrongAnswer">Jean-Louis David</h3>
-                    <h3 class="wrongAnswer">David Faible</h3>
-                    <h3 class="rightAnswer">Davir Faure</h3>
+                    <h3 class="wrongAnswer">réponse 1</h3>
+                    <h3 class="wrongAnswer">réponse 2</h3>
+                    <h3 class="wrongAnswer">réponse 3</h3>
+                    <h3 class="rightAnswer">réponse 4</h3>
                 </div>
             </div>
             <div class="question">
-                <h2 class="stringQuestion">Quel est le nom du formateur PHP ?</h2>
+                <h2 class="stringQuestion">question 2</h2>
                 <div class="fullAnswer">
-                    <h3 class="wrongAnswer">Jean le Géant</h3>
-                    <h3 class="wrongAnswer">Jean le Nain</h3>
-                    <h3 class="wrongAnswer">Jean le Petit</h3>
-                    <h3 class="rightAnswer">Jean le Grand</h3>
+                    <h3 class="wrongAnswer">réponse 1</h3>
+                    <h3 class="wrongAnswer">réponse 2</h3>
+                    <h3 class="wrongAnswer">réponse 3</h3>
+                    <h3 class="rightAnswer">réponse 4</h3>
                 </div>
             </div>
             <div class="question">question 3</div>
