--- a/index.html
+++ b/index.html
@@ -59,11 +59,18 @@
                     <img src="/assets/Logomacaronnoiretblanc.png" alt="macaron">
                 </div>
             </div>
-
             <button id="btnWin">Qui commence?</button>
-
+            <div class="modal" id="modal">
+                <div class="classModal">
+                    <h3 id="teamWin"></h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, earum corporis incidunt aliquid, rerum cumque dolorem iste obcaecati laborum natus consequatur!</p>
+                    <button id="btnClose">close</button>
+                </div>
+            </div>
         </div>
     </section>
+
+    
 
 
     
