--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="image2"><img src="/assets/Logo macaron noir et blanc.png" alt="image cannelé"></div>
     </section>
 
-    <section class=“team” id=“ancrePlay”>
+    <!-- <section class=“team” id=“ancrePlay”>
         <div class=“bigContainer”>
             <div class=“reglement”>
                 <div>
@@ -58,7 +58,7 @@
             </div>
             <button id=“btnWin”>Qui commence?</button>
         </div>
-    </section>
+    </section> -->
 
 
     <section class="quizz1">
