--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 
     <header class="header">
         <div>
-            <a href=""><ion-icon name="refresh-circle-outline"></ion-icon></a>
+            <a href="">
+                <ion-icon name="refresh-circle-outline"></ion-icon>
+            </a>
             <h3>Bordeaux <br> Quizzzz</h3>
-            
+
         </div>
     </header>
 
@@ -32,45 +34,49 @@
             </a></div>
     </section>
 
-    
 
-    <section class="team" id="ancrePlay" >
-        <div class="bigContainer" >
-            <div class="reglement" >
+
+    <section class="team" id="ancrePlay">
+        <div class="bigContainer">
+            <div class="reglement">
                 <div>
-                <h2 >Réglement</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi iusto esse a, maxime dicta impedit facere, sunt nihil adipisci corrupti architecto! Placeat harum ratione minus vel aspernatur tenetur sit quis?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque vel recusandae saepe excepturi placeat eveniet totam distinctio nam aspernatur, quae nulla nesciunt. Vel adipisci aliquam modi nostrum excepturi magnam? Eius.</p>
-                    </div>
+                    <h2>Réglement</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi iusto esse a, maxime dicta impedit
+                        facere, sunt nihil adipisci corrupti architecto! Placeat harum ratione minus vel aspernatur
+                        tenetur sit quis?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque vel recusandae saepe excepturi
+                        placeat eveniet totam distinctio nam aspernatur, quae nulla nesciunt. Vel adipisci aliquam modi
+                        nostrum excepturi magnam? Eius.</p>
+                </div>
             </div>
-            </div>
+        </div>
 
-            <form id="form" action="">
-                <input type="text" id="text1" placeholder="team?" value="">
-                <button id="btn1">OK</button>
-                <input type="text" id="text2" placeholder="team?" value="">
-                <button id="btn2">ok</button>
-            </form>
+        <form id="form" action="">
+            <input type="text" id="text1" placeholder="team?" value="">
+            <button id="btn1">OK</button>
+            <input type="text" id="text2" placeholder="team?" value="">
+            <button id="btn2">ok</button>
+        </form>
 
-            <div class="containerTeam">
-                <div class="containerTeam1">
-                    <h4 id="team1"></h4>
-                    <img src="/assets/cannelenoiretblanc.png" alt="">
-                </div>
-                <div class="containerTeam2">
-                    <h4 id="team2"></h4>
-                    <img src="/assets/Logomacaronnoiretblanc.png" alt="macaron">
-                </div>
+        <div class="containerTeam">
+            <div class="containerTeam1">
+                <h4 id="team1"></h4>
+                <img src="/assets/cannelenoiretblanc.png" alt="">
             </div>
-            <button id="btnWin">Qui commence?</button>
-            <div class="modal" id="modal">
-                <div class="classModal">
-                    <h3 id="teamWin"></h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, earum corporis incidunt
-                        aliquid, rerum cumque dolorem iste obcaecati laborum natus consequatur!</p>
-                    <button id="btnClose">close</button>
-                </div>
+            <div class="containerTeam2">
+                <h4 id="team2"></h4>
+                <img src="/assets/Logomacaronnoiretblanc.png" alt="macaron">
             </div>
+        </div>
+        <button id="btnWin">Qui commence?</button>
+        <div class="modal" id="modal">
+            <div class="classModal">
+                <h3 id="teamWin"></h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, earum corporis incidunt
+                    aliquid, rerum cumque dolorem iste obcaecati laborum natus consequatur!</p>
+                <button id="btnClose">close</button>
+            </div>
+        </div>
 
         </div>
     </section>
