--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         nostrum excepturi magnam? Eius.</p>
                 </div>
             </div>
-        </div>
+        </div class="containerTirage">
 
         <form id="form" action="">
             <input type="text" id="text1" placeholder="team?" value="">
@@ -67,16 +67,16 @@
                 <h4 id="team2"></h4>
                 <img src="/assets/Logomacaronnoiretblanc.png" alt="macaron">
             </div>
-        </div>
-        <button id="btnWin">Qui commence?</button>
-        <div class="modal" id="modal">
-            <div class="classModal">
-                <h3 id="teamWin"></h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, earum corporis incidunt
-                    aliquid, rerum cumque dolorem iste obcaecati laborum natus consequatur!</p>
-                <button id="btnClose">close</button>
+
+            <button id="btnWin">Qui commence?</button>
+            <div class="modal" id="modal">
+                <div class="classModal">
+                    <h3 id="teamWin"></h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, earum corporis incidunt
+                        aliquid, rerum cumque dolorem iste obcaecati laborum natus consequatur!</p>
+                    <button id="btnClose">close</button>
+                </div>
             </div>
-        </div>
 
         </div>
     </section>
@@ -91,16 +91,16 @@
                 <h2>Question 1 : comment se nomme l'équipe de rugby de TOP14 de bordeaux</h2>
             </div>
 
-            <div class="rep1q1">
+            <div class="answerGood">
                 <h3> l'UBB</h3>
             </div>
-            <div class="rep2q1">
+            <div class="answer">
                 <h3> le CABBG</h3>
             </div>
-            <div class="rep3q1">
+            <div class="answer">
                 <h3> le Stade bordelais</h3>
             </div>
-            <div class="rep4q1">
+            <div class="answer">
                 <h3> l'UBT</h3>
             </div>
         </div>
@@ -117,16 +117,16 @@
                 <h2>Comment s'appel le formateur JS</h2>
             </div>
 
-            <div class="rep1q1-wild">
+            <div class="answer">
                 <h3> David Ginola</h3>
             </div>
-            <div class="rep2q1-wild">
+            <div class="answerGood">
                 <h3> David Ford</h3>
             </div>
-            <div class="rep3q1-wild">
+            <div class="answer">
                 <h3> David fork</h3>
             </div>
-            <div class="rep4q1-wild">
+            <div class="answer">
                 <h3> David Beckam</h3>
             </div>
         </div>
