--- a/index.html
+++ b/index.html
@@ -36,72 +36,75 @@
 
 
 
+    <section class="reglement">
+
+        <h2>Réglement</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi iusto esse a, maxime dicta impedit
+            facere, sunt nihil adipisci corrupti architecto! Placeat harum ratione minus vel aspernatur
+            tenetur sit quis?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque vel recusandae saepe excepturi
+            placeat eveniet totam distinctio nam aspernatur, quae nulla nesciunt. Vel adipisci aliquam modi
+            nostrum excepturi magnam? Eius.</p>
+
+    </section>
+
+
+
     <section class="team" id="ancrePlay">
-        <div class="bigContainer">
-            <div class="reglement">
-                <div>
-                    <h2>Réglement</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi iusto esse a, maxime dicta impedit
-                        facere, sunt nihil adipisci corrupti architecto! Placeat harum ratione minus vel aspernatur
-                        tenetur sit quis?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque vel recusandae saepe excepturi
-                        placeat eveniet totam distinctio nam aspernatur, quae nulla nesciunt. Vel adipisci aliquam modi
-                        nostrum excepturi magnam? Eius.</p>
+
+        <div class="tirage">
+
+            <form id="form" action="">
+                <input type="text" id="text1" placeholder="team?" value="">
+                <button id="btn1">OK</button>
+                <input type="text" id="text2" placeholder="team?" value="">
+                <button id="btn2">ok</button>
+            </form>
+
+            <div class="containerTeam">
+                <div class="containerTeam1">
+                    <h4 id="team1"></h4>
                 </div>
-            </div>
-        </div class="containerTirage">
-
-        <form id="form" action="">
-            <input type="text" id="text1" placeholder="team?" value="">
-            <button id="btn1">OK</button>
-            <input type="text" id="text2" placeholder="team?" value="">
-            <button id="btn2">ok</button>
-        </form>
-
-        <div class="containerTeam">
-            <div class="containerTeam1">
-                <h4 id="team1"></h4>
-                <img src="/assets/cannelenoiretblanc.png" alt="">
-            </div>
-            <div class="containerTeam2">
-                <h4 id="team2"></h4>
-                <img src="/assets/Logomacaronnoiretblanc.png" alt="macaron">
-            </div>
-
-            <button id="btnWin">Qui commence?</button>
-            <div class="modal" id="modal">
-                <div class="classModal">
-                    <h3 id="teamWin"></h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis, earum corporis incidunt
-                        aliquid, rerum cumque dolorem iste obcaecati laborum natus consequatur!</p>
-                    <button id="btnClose">close</button>
+                <div class="containerTeam2">
+                    <h4 id="team2"></h4>
                 </div>
-            </div>
 
+
+                <button id="btnWin">Qui est cannele</button>
+                <div class="modal" id="modal">
+                    <div class="classModal">
+                        <h3 id="teamWin"></h3>
+                        <p>Vous êtes l'équipe Cannelé et vous commencez</p>
+                        <button id="btnClose">close</button>
+                    </div>
+                </div>
+
+            </div>
         </div>
+
     </section>
 
 
     <section class="quizz1">
         <div class="Question bordeaux">
 
-        </div>
-        <div class="diapo1">
-            <div class="question1">
-                <h2>Question 1 : comment se nomme l'équipe de rugby de TOP14 de bordeaux</h2>
-            </div>
+            <div class="diapo1">
+                <div class="question1">
+                    <h2>Question 1 : comment se nomme l'équipe de rugby de TOP14 de bordeaux</h2>
+                </div>
 
-            <div class="answerGood">
-                <h3> l'UBB</h3>
-            </div>
-            <div class="answer">
-                <h3> le CABBG</h3>
-            </div>
-            <div class="answer">
-                <h3> le Stade bordelais</h3>
-            </div>
-            <div class="answer">
-                <h3> l'UBT</h3>
+                <div class="answerGood">
+                    <h3> l'UBB</h3>
+                </div>
+                <div class="answer">
+                    <h3> le CABBG</h3>
+                </div>
+                <div class="answer">
+                    <h3> le Stade bordelais</h3>
+                </div>
+                <div class="answer">
+                    <h3> l'UBT</h3>
+                </div>
             </div>
         </div>
 
@@ -111,23 +114,24 @@
     <section class="quizz2">
         <div class="Question-wild">
 
-        </div>
-        <div class="diapo1-wild">
-            <div class="question1-wild">
-                <h2>Comment s'appel le formateur JS</h2>
-            </div>
 
-            <div class="answer">
-                <h3> David Ginola</h3>
-            </div>
-            <div class="answerGood">
-                <h3> David Ford</h3>
-            </div>
-            <div class="answer">
-                <h3> David fork</h3>
-            </div>
-            <div class="answer">
-                <h3> David Beckam</h3>
+            <div class="diapo1-wild">
+                <div class="question1-wild">
+                    <h2>Comment s'appel le formateur JS</h2>
+                </div>
+
+                <div class="answer">
+                    <h3> David Ginola</h3>
+                </div>
+                <div class="answerGood">
+                    <h3> David Ford</h3>
+                </div>
+                <div class="answer">
+                    <h3> David fork</h3>
+                </div>
+                <div class="answer">
+                    <h3> David Beckam</h3>
+                </div>
             </div>
         </div>
 
