colors ok all slides

--- a/index.html
+++ b/index.html
@@ -76,12 +76,29 @@
                 <h2 class="stringQuestion">Quel est le nom du formateur PHP ?</h2>
                 <div class="fullAnswer">
                     <h3 class="wrongAnswer">Jean le Géant</h3>
-                    <h3 class="wrongAnswer">Jean le Nain</h3>
-                    <h3 class="wrongAnswer">Jean le Petit</h3>
                     <h3 class="rightAnswer">Jean le Grand</h3>
+                    <h3 class="wrongAnswer">Jean le Petit</h3>
+                    <h3 class="wrongAnswer">Jean le Nain</h3>
                 </div>
             </div>
-            <div class="question">question 3</div>
+            <div class="question">
+                <h2 class="stringQuestion">Quel est le nom de l'équipe de rugby de Bordeaux ?</h2>
+                <div class="fullAnswer">
+                    <h3 class="wrongAnswer">UGC</h3>
+                    <h3 class="rightAnswer">UBB</h3>
+                    <h3 class="wrongAnswer">UBER</h3>
+                    <h3 class="wrongAnswer">GIT HUB</h3>
+                </div>
+            </div>
+            <div class="question">
+                <h2 class="stringQuestion">Quelle porte est connue à Bordeaux ?</h2>
+                <div class="fullAnswer">
+                    <h3 class="wrongAnswer">Porte d'Alsace</h3>
+                    <h3 class="wrongAnswer">Porte de Gironde</h3>
+                    <h3 class="rightAnswer">Porte de Bourgogne</h3>
+                    <h3 class="wrongAnswer">Porte des toilettes</h3>
+                </div>
+            </div>
         </div>
 
         <div class="cont-btn">
@@ -104,7 +121,7 @@
 
 <footer>
     <div class="footer">
-        <h3> le compteur ici </h3>
+        <h2> le compteur ici </h3>
     </div>
 </footer>
 
